--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -91,7 +91,7 @@
             ">
               <img alt="Analýza Black Friday 2019"
                    class="responsive"
-                   src="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,dpr_auto,f_auto/v1575296707/www.hlidacshopu.cz/banner-desktop.png">
+                   src="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,dpr_auto,f_auto/v1576083128/www.hlidacshopu.cz/desktop-banner.png">
             </picture>
           </a>
         </div>
