[www.hlidacshopu.cz] Black Friday 2019

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/master.html' %} {% from 'macros/helpers.html' import sprite
-%} {% block title %}Přehled Black Friday na Hlídači shopů{% endblock %} {% block
+%} {% block title %}Přehled Black Friday 2019 na Hlídači shopů{% endblock %} {% block
 preload %}
 <link
   rel="modulepreload"
@@ -65,7 +65,7 @@ preload %}
     <div class="layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Black Friday v číslech</h2>
+          <h2>Black Friday 2019 v číslech</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <table class="shops-stats">
