[www.topmonks.com] Fixed broken images of team members

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -156,7 +156,7 @@
           existing challenge, please get in touch with&nbsp;Ondrej.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell">
-            {{ avatar(members['ondrej-tupy'], 112) }}
+            {{ avatar(team.members['ondrej-tupy'], 112) }}
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Ondrej Tupý</span><br>
@@ -175,7 +175,7 @@
           don't hesitate to contact Lea. Let's BUIDL together.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell">
-            {{ avatar(members['lea-petrasova'], 112) }}
+            {{ avatar(team.members['lea-petrasova'], 112) }}
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Lea Petrášová</span><br/>
@@ -195,7 +195,7 @@
           angels &amp; first investors.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell">
-            {{ avatar(members['jiri-penzes'], 112) }}
+            {{ avatar(team.members['jiri-penzes'], 112) }}
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Jirka Pénzeš</span><br>
@@ -214,7 +214,7 @@
           or just contact us.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell">
-            {{ avatar(members['ales-roubicek'], 112) }}
+            {{ avatar(team.members['ales-roubicek'], 112) }}
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Aleš Roubíček</span><br>
