--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -554,7 +554,7 @@ TopMonks - Software development partner for your business
           existing challenge, please get in touch with&nbsp;Ondrej.</p>
         <div class="mdc-layout-grid__inner">
           <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            {{ avatar(members['ondrej-tupy'], 112) }}
+            {{ avatar(team.members['ondrej-tupy'], 112) }}
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="name">Ondrej Tupý</span><br>
