--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -630,7 +630,7 @@
       <div class="mdc-layout-grid__inner">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-          {{ avatar(members['ales-roubicek'], 112) }}
+          {{ avatar(team.members['ales-roubicek'], 112) }}
         </div>
         <div
           class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
