Change copyright to 2020 🎉

--- a/shared/src/common/footer.html
+++ b/shared/src/common/footer.html
@@ -47,7 +47,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p>© 2019 TopMonks s.r.o.</p>
+          <p>&copy; 2020 TopMonks s.r.o.</p>
         </div>
         <div class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons">
