Improved web font loading on all sites

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -13,15 +13,10 @@
   <link rel="preconnect" href="//cdn.jsdelivr.net">
   <link rel="preconnect" href="//www.google-analytics.com">
   <link rel="preconnect" href="//static.hotjar.com">
-  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script" crossorigin>
-  <link rel="preload" href="https://use.typekit.net/her1ktw.js" as="script">
-  <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-KJBJZ9M" as="script">
-  <script>WebFontConfig = { typekit: {id: 'her1ktw'}, async: true }</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
-          integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
-          crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
+  <link rel="preload" as="style" href="https://use.typekit.net/her1ktw.css">
+  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-KJBJZ9M">
+  <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&amp;display=block">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
