--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -9,21 +9,9 @@
     name="viewport"
     content="width=device-width,initial-scale=1,viewport-fit=cover"
   />
-  <script>
-    WebFontConfig = { typekit: { id: "her1ktw" }, async: true };
-  </script>
-  <script
-    src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"
-    async
-    defer
-    integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
-    crossorigin="anonymous"
-  ></script>
-
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
-  <!--<link rel="manifest" href="/site.webmanifest">--->
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#C567B7"/>
   <meta name="msapplication-TileColor" content="#7645C1"/>
   <meta name="theme-color" content="#D5E9FF"/>
@@ -44,12 +32,9 @@
     content="https://studio.topmonks.com/og-image.png"
   />
   {% include 'shared/analytics.html' %}
-  <link rel="stylesheet" href="/stylesheets/main.css"/>
+  <link rel="stylesheet" href="https://use.typekit.net/her1ktw.css">
   <link rel="stylesheet" href="/stylesheets/typography.css"/>
-  <link
-    href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900"
-    rel="stylesheet"
-  />
+  <link rel="stylesheet" href="/stylesheets/main.css"/>
 </head>
 {% include 'shared/header.html' %}
 
