--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -13,13 +13,8 @@
   <link rel="preconnect" href="//cdn.jsdelivr.net">
   <link rel="preconnect" href="//www.google-analytics.com">
   <link rel="preconnect" href="//static.hotjar.com">
-  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script" crossorigin>
-  <link rel="preload" href="https://use.typekit.net/her1ktw.js" as="script">
-  <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
-  <script>WebFontConfig = { typekit: { id: "her1ktw" }, async: true };</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
-          integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
-          crossorigin="anonymous"></script>
+  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&display=swap">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -52,7 +47,6 @@
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-T4KMQ2F");</script>
   <!-- End Google Tag Manager -->
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="/stylesheets/blog.css">
 
